apps/qbittorrent/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vuetorrent
  namespace: qbittorrent
  labels:
    app.kubernetes.io/name: qbittorrent
spec:
  ingressClassName: tailscale
  defaultBackend:
    service:
      name: qbittorrent
      port:
        name: http
  tls:
    - hosts: [torrent]
